# dvergr

./: .gitignore  .tool-versions  Cargo.toml  README.md  TODO.org  example.py  shadows.py  todo.md
assets/: bg.aseprite  black_1px.aseprite
assets/img/: 32x32_bl.ase
assets/rd/doc/: README.txt
notes/: behaviour.md  cards.md  combat.md  maps.md  mechanics.md  rpg_sys.md  setting.md  time.md
src/: goblin.rs  input.rs  main.rs  marker_components.rs  material.rs  player.rs  typical.rs
src/action/: mod.rs  on_success.rs  systems.rs  verb.rs  yagni.rs
src/action/validation/: mod.rs  movement.rs
src/anatomy/: mod.rs
src/attributes/: mod.rs
src/board/: cell.rs  cell_store.rs  creature_store.rs  direction.rs  generator.rs  geometry.rs  lighting.rs  mod.rs  plugin.rs  primitives.rs  shadowcast.rs
src/character/: equipment.rs  mod.rs  pace.rs
src/combat/: mod.rs
src/command/: mod.rs
src/config/: mod.rs
src/creature/: anatomy.rs  character.rs  condition.rs  equipment.rs  locus.rs  mod.rs  movement.rs  pace.rs  phenotype.rs  species.rs
src/damage/: mod.rs
src/dice/: mod.rs
src/events/: mod.rs
src/graphics/: anim.rs  asset_loading.rs  components.rs  init_map.rs  mobs.rs  mod.rs  move_anim.rs  player_avatar.rs  player_decoration.rs  playground.rs  shadowcast_rec.rs  sprites.rs  tilemap.rs  torchlight.rs
src/input/: mod.rs
src/inventory/: mod.rs  weapons.rs
src/map/: mod.rs  render.rs
src/octree/: mod.rs
src/player/: mod.rs  movement.rs  visibility.rs
src/state/: mod.rs
src/sys/player_movement/: mod.rs
src/time/: mod.rs
src/ui/: layout.rs  mod.rs
