#![deny(clippy::all)]
#![warn(clippy::pedantic)]
#![warn(clippy::restriction)]
#![warn(clippy::nursery)]
#![warn(clippy::cargo)]

[package]
name = "dvergr"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12", features = ["tonemapping_luts"] }
bevy_turborand = { version = "0.7.0", features = ["chacha"] }
bevy_ecs_tilemap = { git = "https://github.com/divark/bevy_ecs_tilemap", branch = "0.12-fixes" }
bevy-fps-counter = "0.3.0"
num-rational = "0.4.1"
bevy_mod_picking = "0.17.0"
